<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/tools"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/dark_blue">

        <TextView
            android:id="@+id/link_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:autoLink="all"
            android:text="@string/standar_url"
            android:textColorLink="@color/orange"
            android:textSize="21sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/placeholder1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text=" " />

            <TextView
                android:id="@+id/uriPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text=" " />

            <TextView
                android:id="@+id/txtBarCodeScannerInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/barcode_scanner_msg"
                android:visibility="gone" />

            <TextView
                android:id="@+id/placeholder3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text=" " />

            <TextView
                android:id="@+id/technical_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/technical_info" />

            <TextView
                android:id="@+id/placeholder4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text=" " />

            <Button
                android:id="@+id/button_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_rate" />

            <Button
                android:id="@+id/change_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_ip" />

            <Button
                android:id="@+id/button_share_containing_folder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_containing_folder" />

            <Button
                android:id="@+id/stop_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_server" />

            <Button
                android:id="@+id/button_share_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_url" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>