<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="4dp"
    android:gravity="center_horizontal">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/change_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:clickable="true"
        android:scaleType="center"
        app:layout_constraintEnd_toStartOf="@+id/stop_server"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="30dp"
        app:srcCompat="@drawable/ic_ip"
        app:text="@string/change_ip" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stop_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/button_share_url"
        app:layout_constraintStart_toEndOf="@+id/change_ip"
        app:layout_constraintTop_toTopOf="@+id/change_ip"
        app:maxImageSize="20dp"
        app:srcCompat="@drawable/ic_stop"
        app:text="@string/stop_server" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_share_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stop_server"
        app:layout_constraintTop_toTopOf="@+id/stop_server"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/ic_share"
        app:text="@string/share_url" />
    <!--app:fabCustomSize="90dp"-->
</androidx.constraintlayout.widget.ConstraintLayout>
